<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.additem.AddItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addItemHeader" />

        <TextView
            android:id="@+id/addItemHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/AddItemHeader"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

        <TextView
            android:id="@+id/addItemNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/itemNameLabel"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/addItemBrandLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/itemBrandLabel"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addItemNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/addItemNameLabel" />

        <TextView
            android:id="@+id/addItemPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/itemPriceLabel"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addItemBrandLabel"
            app:layout_constraintTop_toBottomOf="@+id/addItemBrandLabel" />

        <TextView
            android:id="@+id/addItemDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/itemDateLabel"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addItemPriceLabel"
            app:layout_constraintTop_toBottomOf="@+id/addItemPriceLabel" />

        <TextView
            android:id="@+id/addItemSellerLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/itemSellerLabel"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addItemDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/addItemDateLabel" />

        <EditText
            android:id="@+id/addItemName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/itemNameDefault"
            app:layout_constraintBottom_toBottomOf="@+id/addItemNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addItemNameLabel"
            app:layout_constraintTop_toTopOf="@+id/addItemNameLabel"
            tools:ignore="LabelFor,TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/addItemSeller"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/itemSellerDefault"
            app:layout_constraintBottom_toBottomOf="@+id/addItemSellerLabel"
            app:layout_constraintEnd_toEndOf="@+id/addItemName"
            app:layout_constraintStart_toStartOf="@+id/addItemName"
            app:layout_constraintTop_toTopOf="@+id/addItemSellerLabel"
            tools:ignore="LabelFor,TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/addItemDate"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/itemDateDefault"
            app:layout_constraintBottom_toBottomOf="@+id/addItemDateLabel"
            app:layout_constraintEnd_toEndOf="@+id/addItemName"
            app:layout_constraintStart_toStartOf="@+id/addItemName"
            app:layout_constraintTop_toTopOf="@+id/addItemDateLabel"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="LabelFor,TextFields,TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/addItemPrice"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/itemPriceDefault"
            app:layout_constraintBottom_toBottomOf="@+id/addItemPriceLabel"
            app:layout_constraintEnd_toEndOf="@+id/addItemName"
            app:layout_constraintStart_toStartOf="@+id/addItemName"
            app:layout_constraintTop_toTopOf="@+id/addItemPriceLabel"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor,TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/addItemBrand"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/addItemBrandLabel"
            app:layout_constraintEnd_toEndOf="@+id/addItemName"
            app:layout_constraintStart_toStartOf="@+id/addItemName"
            app:layout_constraintTop_toTopOf="@+id/addItemBrandLabel"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddConcreteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/addItemButtonDescription"
            android:focusable="true"
            android:src="@drawable/ic_add_fill0_wght400_grad0_opsz48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>